application-prod.properties V2